# samv71-hal

./: .gitignore  Cargo.toml
example/: uart_example.rs
example/uart_example/: Cargo.toml  memory.x
example/uart_example/.cargo/: config
examples/: uart_example.rs
src/: gpio.rs  lib.rs  prelude.rs  uart.rs  watchdog.rs
src/serial/: mod.rs  uart.rs  usart.rs
